# python-valenceclient

./: .coveragerc  .gitignore  .gitreview  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/source/: conf.py  index.rst
valenceclient/: __init__.py  client.py  exc.py  shell.py
valenceclient/common/: base.py  cliutils.py  http.py  i18n.py
valenceclient/common/apiclient/: base.py  exceptions.py
valenceclient/osc/: plugin.py
valenceclient/osc/v1/: flavors.py  nodes.py  podmanager.py  systems.py
valenceclient/redfish/: main.py
valenceclient/redfish/resources/: common.py
valenceclient/redfish/resources/node/: constants.py  mappings.py  node.py
valenceclient/redfish/resources/storage/: remote_target.py  storage.py
valenceclient/tests/: test_client.py  test_valenceclient.py
valenceclient/tests/unit/: test_client.py  utils.py
valenceclient/tests/unit/common/: test_base.py  test_exc.py  test_http.py
valenceclient/tests/unit/common/apiclient/: test_base.py  test_exception.py
valenceclient/tests/unit/osc/: test_base.py  test_flavor.py  test_node.py  test_podmanager.py  test_system.py
valenceclient/tests/unit/redfish/: test_main.py
valenceclient/tests/unit/redfish/json_samples/: node.json  node_collection.json  root.json
valenceclient/tests/unit/redfish/resources/node/: \  test_node.py
valenceclient/tests/unit/v1/: test_resource_fields.py
valenceclient/v1/: client.py  flavor_client.py  node.py  node_client.py  node_shell.py  podmanagers.py  resource_fields.py  shell.py  system_client.py
