[metadata]
name = python-valenceclient
summary = Openstack client for Valence
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    valenceclient

[entry_points]
openstack.cli.extension =
    valence = valenceclient.osc.plugin

openstack.valence.v1 =
    valence_podmanager_list = valenceclient.osc.v1.podmanager:ListPodManagers
    valence_podmanager_create = valenceclient.osc.v1.podmanager:CreatePodManager
    valence_podmanager_delete = valenceclient.osc.v1.podmanager:DeletePodManagers
    valence_podmanager_show = valenceclient.osc.v1.podmanager:ShowPodManager
    valence_node_list = valenceclient.osc.v1.nodes:ListNodes
    valence_node_show = valenceclient.osc.v1.nodes:ShowNode
    valence_node_compose = valenceclient.osc.v1.nodes:ComposeNode
    valence_node_delete = valenceclient.osc.v1.nodes:DeleteNodes
    valence_node_manage = valenceclient.osc.v1.nodes:ManageNode
    valence_system_list = valenceclient.osc.v1.systems:ListSystems
    valence_system_show = valenceclient.osc.v1.systems:ShowSystem
    valence_flavor_list = valenceclient.osc.v1.flavors:ListFlavors
    valence_flavor_show = valenceclient.osc.v1.flavors:ShowFlavor
    valence_flavor_create = valenceclient.osc.v1.flavors:CreateFlavor
    valence_flavor_delete = valenceclient.osc.v1.flavors:DeleteFlavors
    valence_flavor_update = valenceclient.osc.v1.flavors:UpdateFlavor

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = valenceclient/locale
domain = valenceclient

[update_catalog]
domain = valenceclient
output_dir = valenceclient/locale
input_file = valenceclient/locale/valenceclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = valenceclient/locale/valenceclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
